fixed alignment of dashboard

--- a/styles/Dashboard.module.css
+++ b/styles/Dashboard.module.css
@@ -1,7 +1,6 @@
 .container {
   padding: 0 2rem;
   border: 6px solid #ff9416;
-  display: flex;
 }
 
 .side {
